--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,7 +1,8 @@
 pydantic~=2.7.1
 requests~=2.31.0
 openai~=1.30.4
-duckdb~=1.0.0
 pandas~=2.2.2
 pytest~=8.2.2
 chromadb~=0.5.3
+sentence-transformers~=3.0.1
+pyyaml~=6.0.1
