--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -9,3 +9,4 @@ RUN npm run build
 # Stage 2
 FROM nginx:1.27
 COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
