--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
     "@blocksuite/blocks": "^0.16.0-canary-202408030846-447b5bc",
     "@blocksuite/presets": "^0.16.0-canary-202408030846-447b5bc",
     "@blocksuite/store": "^0.16.0-canary-202408030846-447b5bc",
+    "jotai": "^2.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "yjs": "^13.6.18"
   },
   "devDependencies": {
+    "@swc-jotai/debug-label": "^0.1.1",
+    "@swc-jotai/react-refresh": "^0.1.1",
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -31,6 +34,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jotai-devtools": "^0.10.0",
     "postcss": "^8.4.40",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.7",
