--- a/ai/config.example.yaml
+++ b/ai/config.example.yaml
@@ -1,4 +1,16 @@
+port: 8000
+workers: 1
+
 openai_api_key: ""  # Change this with your own
 openai_model: "gpt-3.5-turbo"
 openai_base_url: "https://api.openai.com/v1"
+
 embedding_model_name_or_path: "BAAI/bge-m3"
+embedding_batch_size: 1
+embedding_device: "cpu"
+
+ranker_model_name_or_path: "BAAI/bge-reranker-v2-m3"
+ranker_batch_size: 1
+ranker_device: "cpu"
+
+data_dir: "chroma_data"
