--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.2",
     "yjs": "^13.6.18"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sortablejs": "^1",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
