--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -16,6 +16,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /swagger {
+            proxy_pass http://api_backend:5433;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /api/chat {
             proxy_pass http://ai_backend:8000;
             proxy_set_header Host $host;
