--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -4,4 +4,5 @@
     "source.fixAll.eslint": "explicit"
   },
   "typescript.preferences.importModuleSpecifier": "non-relative",
+  "typescript.tsdk": "node_modules/typescript/lib",
 }
