Update backend URL and include additional files in tsconfig

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=http://localhost:3000
+# http://ddns.ip.lucien.ink:8911/swagger/index.html
+VITE_BACKEND_URL=http://ddns.ip.lucien.ink:8911/
