--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "jotai-devtools": "^0.10.0",
+    "orval": "^7.1.1",
     "postcss": "^8.4.40",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.7",
