--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@blocksuite/blocks": "^0.16.0-canary-202408030846-447b5bc",
     "@blocksuite/presets": "^0.16.0-canary-202408030846-447b5bc",
     "@blocksuite/store": "^0.16.0-canary-202408030846-447b5bc",
+    "axios": "^1.7.7",
     "jotai": "^2.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
