--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api:sync-json": "wget http://ddns.ip.lucien.ink:8911/swagger/doc.json",
+    "api:gen-swagger": "orval --config orval.config.ts"
   },
   "dependencies": {
     "@blocksuite/blocks": "^0.16.0-canary-202408030846-447b5bc",
