--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@blocksuite/presets": "^0.16.0-canary-202408030846-447b5bc",
     "@blocksuite/store": "^0.16.0-canary-202408030846-447b5bc",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "jotai": "^2.9.1",
     "react": "^18.3.1",
