--- a/ai/compose.yml
+++ b/ai/compose.yml
@@ -11,9 +11,17 @@ services:
     env_file:
       - .env
     restart: always
-    entrypoint: python3 main.py
+    entrypoint: uvicorn
+    command:
+      - "app:app"
+      - "--workers"
+      - "${WORKERS}"
+      - "--host"
+      - "0.0.0.0"
+      - "--port"
+      - "8000"
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:${PORT}/api/health || exit 1"]
+      test: [ "CMD-SHELL", "curl -f http://localhost:${PORT}/api/health || exit 1" ]
     dns:
       - 223.5.5.5
       - 119.29.29.29
