--- a/ai/env.example
+++ b/ai/env.example
@@ -8,7 +8,7 @@ AI_KNOW_OPENAI_BASE_URL="https://api.openai.com/v1"
 AI_KNOW_VECTOR_DB_MODEL_NAME_OR_PATH="BAAI/bge-m3"
 AI_KNOW_VECTOR_DB_BATCH_SIZE=1
 AI_KNOW_VECTOR_DB_DEVICE="cpu"
-AI_KNOW_VECTOR_DB_DATA_DIR="chroma_data"
+AI_KNOW_VECTOR_DB_PATH="chroma_data"
 
 AI_KNOW_RANKER_MODEL_NAME_OR_PATH="BAAI/bge-reranker-v2-m3"
 AI_KNOW_RANKER_BATCH_SIZE=1
