--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -8,7 +8,15 @@ http {
     server {
         listen 80;
 
-        location /api {
+        location ^~ /api/v1 {
+            proxy_pass http://ai_backend:8000/api/v1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ^~ /api {
             proxy_pass http://api_backend:5433;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -16,7 +24,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /swagger {
+        location ^~ /swagger {
             proxy_pass http://api_backend:5433;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -24,21 +32,21 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/chat {
-            proxy_pass http://ai_backend:8000;
+        location ^~ / {
+            proxy_pass http://ai_backend:8000/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location / {
-            proxy_pass http://web;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+	# location ^~ / {
+        #     proxy_pass http://web;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
     }
 }
 
