--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -8,15 +8,15 @@ http {
     server {
         listen 80;
 
-        location ^~ /api/v1 {
-            proxy_pass http://ai_backend:8000/api/v1;
+        location ~ ^/(docs|api/v1|openapi\.json) {
+            proxy_pass http://ai_backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location ^~ /api {
+        location ~ ^/(api|swagger) {
             proxy_pass http://api_backend:5433;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -24,29 +24,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location ^~ /swagger {
-            proxy_pass http://api_backend:5433;
+	location ^~ / {
+            proxy_pass http://web;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        location ^~ / {
-            proxy_pass http://ai_backend:8000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-	# location ^~ / {
-        #     proxy_pass http://web;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
     }
 }
 
